--- a/index.html
+++ b/index.html
@@ -1,27 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Leaflet</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet/dist/leaflet.css"
-    />
-    <link type="text/css" rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1> Ryerson</h1>
-    <hr/>
 
-    <p>This is lucia's work:</p>
+<head>
+  <title>Leaflet</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link type="text/css" rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link type="text/css" rel="stylesheet" href="style.css" />
+</head>
 
-    <script>
+<body>
+  <h1> Ryerson</h1>
+  <hr />
+
+  <p>This is lucia's work:</p>
+
+  <script>
       //script to print out one letter at a time.
-    </script>
-    <div id="leaflet" style="width: 1100px; height: 600px;"></div>
-    <script src="https://unpkg.com/leaflet/dist/leaflet-src.js"></script>
-    <script src="script.js"></script>
-  </body>
+  </script>
+  <h1>Hello</h1>
+  <div id="leaflet" style="width: 100%; height: 600px;">
+    <div class="leaflet-control leaflet-top leaflet-left col-sm-2 col-sm-offset-1">
+      <h2 id="maptitle">Managing
+        Migration:
+        Tech Tracker</h2>
+    </div>
+    <div class="leaflet-control leaflet-bottom leaflet-left col-sm-2 col-sm-offset-1">
+      <p id="maptext">Innovative technologies have
+        given rise to new ways to
+        manage migration. These
+        technologies are often
+        deployed for purposes of
+        efficiency, surveillance and
+        tracking.<br/><br/>
+        This tool tracks the
+        development and deployment
+        of technology in the migration
+        sector to manage the flow of
+        people across borders. The
+        tool aims to capture key
+        players, potential violations
+        and leaders in the industry.</p>
+    </div>
+  </div>
+
+  <script src="https://unpkg.com/leaflet/dist/leaflet-src.js"></script>
+  <script src="script.js"></script>
+</body>
+
 </html>
