changed line color

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           id="titleLine"
           size="4"
           width="90%"
-          color="#89b7df"
+          color="##afcee9"
           style="display: none"
         />
 
