--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           id="titleLine"
           size="4"
           width="90%"
-          color="##afcee9"
+          color="#afcee9"
           style="display: none"
         />
 
